--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(simple_arm)
 find_package(catkin REQUIRED COMPONENTS
 	std_msgs
 	message_generation
+	controller_manager
 )
 
 ## System dependencies are found with CMake's conventions
